--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
 
             <div class="header-nav__content">
-                <h3>Navigation</h3>
+                <h3>Navigation Test</h3>
 
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
@@ -566,7 +566,7 @@
             <div class="contact-primary">
 
                 <h3> <p style="font-size:24px">Sign Up for Lynbrook DECA Incubator II </p></h3>
-            
+
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTvjMGq6bTxe2-K7sG-rVNmRF7E09sYfZuZYgBzJa9fNH3cw/viewform?embedded=true" class="smoothscroll btn btn--stroke" width="900, initial-scale=1" height="520" >Sign Up</a>
 
 
