--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
 
             <div class="header-nav__content">
-                <h3>Navigation Test</h3>
+                <h3>Navigation</h3>
 
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
