--- a/index.html
+++ b/index.html
@@ -476,9 +476,8 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Our Clients</h3>
-                <h1 class="display-2">Glint has been honored to
-                partner up with these clients</h1>
+                <h3 class="subhead">Prizes</h3>
+                <h1 class="display-2">Here are the prizes for the best businesses!</h1>
             </div>
         </div> <!-- end section-header -->
 
