--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-              DECA Incubator's primary purpose is to create a welcoming environment for students around the Bay Area to pitch their ideas. On May 18th at Lynbrook High School, teams will have business concepts ready to impress judges and win cool prizes. All new ideas will be accepted!
+            DECA Incubator's primary purpose is to create a welcoming environment for students around the Bay Area to pitch their ideas. On May 18th at Lynbrook High School, teams will have business concepts ready to impress judges and win cool prizes. All new ideas, apps or physical products, will be accepted, so sign up now!
             </div>
         </div> <!-- end about-desc -->
 
@@ -202,8 +202,8 @@
                     <h3 class="h2">Competition Requirements</h3>
                     <p>As a competitor, your main job is to sell your business to the judges.
                       Think importance, as in what makes your business’s product viable and better than the competitors.
-                      This part relies on creativity, and remember to think out of the box! Y
-                      our business can be a twist on an existing company or something entirely new.
+                      This part relies on creativity, and remember to think out of the box!
+                      Your business can be a twist on an existing company or something entirely new.
                       Here’s a more detailed <a href="https://apple.com"> schedule </a>.
                     </p>
                 </div>
@@ -555,28 +555,23 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Contact Us</h3>
-                <h1 class="display-2 display-2--light">Reach out for a new project or just say hello</h1>
+                <h3 class="subhead">Sign Up</h3>
+                <h1 class="display-2 display-2--light">We look forward to seeing you!</h1>
             </div>
+            <div style="text-align:center;">
+              <button id="button" class="smoothscroll btn btn--stroke2">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTvjMGq6bTxe2-K7sG-rVNmRF7E09sYfZuZYgBzJa9fNH3cw/viewform?embedded=true" >Sign Up</a></button>
+              </div>
+
+              <script type="text/javascript">
+    document.getElementById("button").onclick = function () {
+        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSeTvjMGq6bTxe2-K7sG-rVNmRF7E09sYfZuZYgBzJa9fNH3cw/viewform?embedded=true";
+    };
+</script>
+
         </div>
 
-        <div class="row contact-content" data-aos="fade-up">
 
-            <div class="contact-primary">
-
-                <h3> <p style="font-size:24px">Sign Up for Lynbrook DECA Incubator II </p></h3>
-
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTvjMGq6bTxe2-K7sG-rVNmRF7E09sYfZuZYgBzJa9fNH3cw/viewform?embedded=true" class="smoothscroll btn btn--stroke" width="900, initial-scale=1" height="520" >Sign Up</a>
-
-
-                </form>
-
-
-
-                </div> <!-- end contact-info -->
-            </div> <!-- end contact-secondary -->
-
-        </div> <!-- end contact-content -->
 
     </section> <!-- end s-contact -->
 
