--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">What We Do</h3>
-                <h1 class="display-2">We’ve got everything you need to launch and grow your business</h1>
+                <h3 class="subhead">Details</h3>
+                <h1 class="display-2">The break down of what is expected at the competition</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -272,8 +272,8 @@
 
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
                 <div class="col-full">
-                    <h3 class="subhead">Recent Works</h3>
-                    <h1 class="display-2 display-2--light">We love what we do, check out some of our latest works</h1>
+                    <h3 class="subhead">Judges and Speakers</h3>
+                    <h1 class="display-2 display-2--light">Meet your judges and speakers for this year's competition!</h1>
                 </div>
             </div> <!-- end section-header -->
 
@@ -504,7 +504,7 @@
 
                     <div class="testimonials__slide">
 
-                        <p>“Innovation distinguishes between a leader and a follower”</p>
+                        <p>“Innovation distinguishes between a leader and a follower.”</p>
 
                         <img src="images/steve.jpg" alt="Author image" class="testimonials__avatar">
                         <div class="testimonials__info">
