--- a/index.html
+++ b/index.html
@@ -287,27 +287,27 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                    <img src="images/portfolio/lady-shutterbug.jpg"
-                                         srcset="images/portfolio/lady-shutterbug.jpg 1x, images/portfolio/lady-shutterbug@2x.jpg 2x" alt="">
+                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
+                                    <img src="images/qmark@1x.png"
+                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    Shutterbug
+                                    TBD
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Branding
+                                    More details coming soon!
                                 </p>
                             </div>
 
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
                                 <i class="icon-link"></i>
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                <p>Check back soon for more details!</p>
                             </div>
 
                         </div>
@@ -317,27 +317,27 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="Woodcraft" data-size="1050x700">
-                                    <img src="images/portfolio/woodcraft.jpg"
-                                         srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
+                                    <img src="images/qmark@1x.png"
+                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    Woodcraft
+                                    TBD
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Web Design
+                                    More details coming soon!
                                 </p>
                             </div>
 
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
                                 <i class="icon-link"></i>
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                <p>Check back soon for more details!</p>
                             </div>
 
                         </div>
@@ -347,27 +347,27 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
-                                    <img src="images/portfolio/the-beetle.jpg"
-                                         srcset="images/portfolio/the-beetle.jpg 1x, images/portfolio/the-beetle@2x.jpg 2x" alt="">
+                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
+                                    <img src="images/qmark@1x.png"
+                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    The Beetle
+                                    TBD
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Web Development
+                                    More details coming soon!
                                 </p>
                             </div>
 
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
                                 <i class="icon-link"></i>
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                <p>Check back soon for more details!</p>
                             </div>
 
                         </div>
@@ -377,27 +377,27 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/portfolio/gallery/g-grow-green.jpg" class="thumb-link" title="Grow Green" data-size="1050x700">
-                                    <img src="images/portfolio/grow-green.jpg"
-                                         srcset="images/portfolio/grow-green.jpg 1x, images/portfolio/grow-green@2x.jpg 2x" alt="">
+                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
+                                    <img src="images/qmark@1x.png"
+                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    Grow Green
+                                    TBD
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Branding
+                                    More details coming soon!
                                 </p>
                             </div>
 
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
                                 <i class="icon-link"></i>
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                <p>Check back soon for more details!</p>
                             </div>
 
                         </div>
@@ -407,57 +407,57 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/portfolio/gallery/g-guitarist.jpg" class="thumb-link" title="Guitarist" data-size="1050x700">
-                                    <img src="images/portfolio/guitarist.jpg"
-                                         srcset="images/portfolio/guitarist.jpg 1x, images/portfolio/guitarist@2x.jpg 2x" alt="">
+                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
+                                    <img src="images/qmark@1x.png"
+                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    Guitarist
+                                    TBD
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Web Design
+                                    More details coming soon!
                                 </p>
                             </div>
 
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
                                 <i class="icon-link"></i>
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                <p>Check back soon for more details!</p>
                             </div>
 
                         </div>
-                    </div> <!-- end masonry__brick -->
+                    </div><!-- end masonry__brick -->
 
                     <div class="masonry__brick" data-aos="fade-up">
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/portfolio/gallery/g-palmeira.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                    <img src="images/portfolio/palmeira.jpg"
-                                         srcset="images/portfolio/palmeira.jpg 1x, images/portfolio/palmeira@2x.jpg 2x" alt="">
+                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
+                                    <img src="images/qmark@1x.png"
+                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    Palmeira
+                                    TBD
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Web Design
+                                    More details coming soon!
                                 </p>
                             </div>
 
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
                                 <i class="icon-link"></i>
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                                <p>Check back soon for more details!</p>
                             </div>
 
                         </div>
