--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Glint 2017</span>
+                  <span>© Copyright Glint 2017</span>
+                  <span>Site Template by <a href="https://www.colorlib.com/">Colorlib</a></span>	
 
                 </div>
 
