--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Incubator II</title>
+    <title>Incubator III</title>
     <meta name="description" content="">
     <meta name="author" content="Lakshay Maharana, Charu Vijay">
 
@@ -129,33 +129,33 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
 
-                <h1 class="display-1 display-1--light">Lynbrook DECA Incubator II</h1>
+                <h1 class="display-1 display-1--light">Lynbrook DECA Incubator III</h1>
             </div>
         </div> <!-- end section-header -->
 
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-            DECA Incubator's primary purpose is to create a welcoming environment for students around the Bay Area to pitch their ideas. On May 18th at Lynbrook High School, teams will have business concepts ready to impress judges and win cool prizes. All new ideas, apps or physical products, will be accepted, so sign up now!
+            DECA Incubator's primary purpose is to create a welcoming environment for students around the Bay Area to pitch their ideas. On May 17th at Lynbrook High School, teams will have business concepts ready to impress judges and win cool prizes. All new ideas, apps or physical products, will be accepted, so sign up now!
             </div>
         </div> <!-- end about-desc -->
 
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
 
             <div class="col-block stats__col ">
-                <div class="stats__count">10</div>
+                <div class="stats__count">3</div>
                 <h5>Awards Received</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">20</div>
+                <div class="stats__count">40</div>
                 <h5>Competitors</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">12</div>
+                <div class="stats__count">20</div>
                 <h5>Teams</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">500</div>
+                <div class="stats__count">200</div>
                 <h5>Winning Prize</h5>
             </div>
 
@@ -561,7 +561,7 @@
             </div>
             <div style="text-align:center;">
               <button id="button" class="smoothscroll btn btn--stroke2">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTvjMGq6bTxe2-K7sG-rVNmRF7E09sYfZuZYgBzJa9fNH3cw/viewform?embedded=true" >Sign Up</a></button>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" >Sign Up</a></button>
               </div>
 
               <script type="text/javascript">
