--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div class="row home-content__main">
 
-                <h3>Lynbrook DECA Incubator II</h3>
+                <h3>Lynbrook DECA Incubator III</h3>
 
                 <h1>
                     Compete to Win.
@@ -566,7 +566,7 @@
 
               <script type="text/javascript">
     document.getElementById("button").onclick = function () {
-        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSeTvjMGq6bTxe2-K7sG-rVNmRF7E09sYfZuZYgBzJa9fNH3cw/viewform?embedded=true";
+        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link";
     };
 </script>
 
