--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a href="#contact" class="smoothscroll btn btn--stroke">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" class="smoothscroll btn btn--stroke">
                         Sign Up
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
