--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" class="smoothscroll btn btn--stroke">
                         Sign Up
                     </a>
+                    <script type="text/javascript">
+    document.getElementById("home-content__buttons").onclick = function () {
+        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link";
+    };
+</script>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Us
                     </a>
