--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     Compete to Win.
                 </h1>
 
-                <div class="home-content__buttons">
+                <div id="NirmitDoshi" class="home-content__buttons">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" class="smoothscroll btn btn--stroke">
                         Sign Up
                     </a>
