--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         Sign Up
                     </a>
                     <script type="text/javascript">
-    document.getElementById("home-content__buttons").onclick = function () {
+    document.getElementById("NirmitDoshi").onclick = function () {
         location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link";
     };
 </script>
