--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     Compete to Win.
                 </h1>
 
-                <div id="NirmitDoshi" class="home-content__buttons">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" class="smoothscroll btn btn--stroke">
+                <div  class="home-content__buttons">
+                    <a id="NirmitDoshi" href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" class="smoothscroll btn btn--stroke">
                         Sign Up
                     </a>
                     <script type="text/javascript">
