--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 </h1>
 
                 <div  class="home-content__buttons">
-                    <a id="NirmitDoshi" href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" class="smoothscroll btn btn--stroke">
-                        Sign Up
-                    </a>
-                    <script type="text/javascript">
-    document.getElementById("NirmitDoshi").onclick = function () {
+                   <button id="button" class="smoothscroll btn btn--stroke2">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" >Sign Up</a></button>
+              </div>
+
+              <script type="text/javascript">
+    document.getElementById("button").onclick = function () {
         location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link";
     };
-</script>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Us
                     </a>
