--- a/index.html
+++ b/index.html
@@ -95,14 +95,8 @@
                 </h1>
 
                 <div  class="home-content__buttons">
-                   <button id="button" class="smoothscroll btn btn--stroke2">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" >Sign Up</a></button>
+                <a href="#contact" >Sign Up</a>
               </div>
-
-              <script type="text/javascript">
-    document.getElementById("button").onclick = function () {
-        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link";
-    };
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Us
                     </a>
