--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                 </h1>
 
                 <div class="home-content__buttons">
-	                    <a href="#contact" class="smoothscroll btn btn--stroke">
+	                    <a href="#contact">
 	                        Sign Up
 	                    </a>
-	                    <a href="#about" class="smoothscroll btn btn--stroke">
+	                    <a href="#about" >
 	                        More About Us
 	                    </a>
 	                </div>
