--- a/index.html
+++ b/index.html
@@ -93,15 +93,14 @@
                 <h1>
                     Compete to Win.
                 </h1>
-
-                <div class="home-content__buttons">
-	                    <a href="#contact">
-	                        Sign Up
-	                    </a>
-	                    <a href="#about" >
-	                        More About Us
-	                    </a>
-	                </div>
+  <div class="home-content__buttons">
+                    <a href="#contact" class="smoothscroll btn btn--stroke">
+                        Sign Up
+                    </a>
+                    <a href="#about" class="smoothscroll btn btn--stroke">
+                        More About Us
+                    </a>
+                </div>
 
             </div>
 
