--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                       Think importance, as in what makes your business’s product viable and better than the competitors.
                       This part relies on creativity, and remember to think out of the box!
                       Your business can be a twist on an existing company or something entirely new.
-                      Here’s a more detailed <a href="https://apple.com"> schedule </a>.
+                      Here’s a more detailed <a href="https://drive.google.com/open?id=111xNdDfzveod3Uut_t7dRPe8RuSChHBle77Wbg2YLHM"> schedule </a>.
                     </p>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                     <h3 class="h2">Rules</h3>
                     <p>Each team will have their own booth and will present science fair style to judges as well as to other guests who attend.
                       In addition, a detailed 10 minute (max) presentation of the business,
-                       a 1-2 page summary (addressing points in the <a href="https://amazon.com"> rubric </a>,
+                       a 1-2 page summary (addressing points in the <a href="https://docs.google.com/document/d/1uyxDRrX3ofRINHlCsIdtk_j3AkhoJNsBHpgYsVwAH7c/edit?usp=sharing"> rubric </a>,
                       and a mockup of the working product (if applicable) will be required.
                     </p>
                 </div>
