--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                    <li><a class="smoothscroll"  href="#services" title="services">Speakers</a></li>
-                    <li><a class="smoothscroll"  href="#works" title="works">Prizes</a></li>
-                    <li><a class="smoothscroll"  href="#clients" title="clients">Agenda</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+                    <li><a class="smoothscroll"  href="#services" title="services">Description</a></li>
+                    <li><a class="smoothscroll"  href="#works" title="works">Judges</a></li>
+                    <li><a class="smoothscroll"  href="#clients" title="clients">Prizes</a></li>
                 </ul>
 
 
@@ -94,9 +93,14 @@
                     Compete to Win.
                 </h1>
   <div class="home-content__buttons">
-                    <a href="#contact" class="smoothscroll btn btn--stroke">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiz_LHq8Lu-polSDU3FvN3303BBuGWCnf1VnGlk6pHxHXk2w/viewform?usp=sf_link" id = "test" class="smoothscroll btn btn--stroke">
                         Sign Up
                     </a>
+                    <script type="text/javascript">
+          document.getElementById("test").onclick = function () {
+              location.href = "https://docs.google.com/forms/d/e/1FAIpQLSeiz_LHq8Lu-polSDU3FvN3303BBuGWCnf1VnGlk6pHxHXk2w/viewform?usp=sf_link";
+          };
+      </script>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Us
                     </a>
@@ -203,7 +207,7 @@
                       Think importance, as in what makes your business’s product viable and better than the competitors.
                       This part relies on creativity, and remember to think out of the box!
                       Your business can be a twist on an existing company or something entirely new.
-                      Here’s a more detailed <a href="https://drive.google.com/open?id=111xNdDfzveod3Uut_t7dRPe8RuSChHBle77Wbg2YLHM"> schedule </a>.
+                      Here’s a more detailed <a href="https://apple.com"> schedule </a>.
                     </p>
                 </div>
             </div>
@@ -216,7 +220,7 @@
                     <h3 class="h2">Rules</h3>
                     <p>Each team will have their own booth and will present science fair style to judges as well as to other guests who attend.
                       In addition, a detailed 10 minute (max) presentation of the business,
-                       a 1-2 page summary (addressing points in the <a href="https://docs.google.com/document/d/1uyxDRrX3ofRINHlCsIdtk_j3AkhoJNsBHpgYsVwAH7c/edit?usp=sharing"> rubric </a>,
+                       a 1-2 page summary (addressing points in the <a href="https://amazon.com"> rubric </a>,
                       and a mockup of the working product (if applicable) will be required.
                     </p>
                 </div>
@@ -548,32 +552,7 @@
 
     <!-- contact
     ================================================== -->
-    <section id="contact" class="s-contact">
-
-        <div class="overlay"></div>
-        <div class="contact__line"></div>
-
-        <div class="row section-header" data-aos="fade-up">
-            <div class="col-full">
-                <h3 class="subhead">Sign Up</h3>
-                <h1 class="display-2 display-2--light">We look forward to seeing you!</h1>
-            </div>
-            <div style="text-align:center;">
-              <button id="button" class="smoothscroll btn btn--stroke2">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiz_LHq8Lu-polSDU3FvN3303BBuGWCnf1VnGlk6pHxHXk2w/viewform?usp=sf_link" >Sign Up</a></button>
-              </div>
-
-              <script type="text/javascript">
-    document.getElementById("button").onclick = function () {
-        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSeiz_LHq8Lu-polSDU3FvN3303BBuGWCnf1VnGlk6pHxHXk2w/viewform?usp=sf_link";
-    };
-</script>
-
-        </div>
-
-
-
-    </section> <!-- end s-contact -->
+   <!-- end s-contact -->
 
 
     <!-- footer
@@ -587,7 +566,7 @@
             <div class="col-twelve">
                 <div class="copyright">
                   <span>© Copyright Glint 2017</span>
-                  <span>Site Template by <a href="https://www.colorlib.com/">Colorlib</a></span>	
+                  <span>Site Template by <a href="https://www.colorlib.com/">Colorlib</a></span>
 
                 </div>
 
