--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-            DECA Incubator's primary purpose is to create a welcoming environment for students around the Bay Area to pitch their ideas. On May 17th at Lynbrook High School, teams will have business concepts ready to impress judges and win cool prizes. All new ideas, apps or physical products, will be accepted, so sign up now!
+            DECA Incubator's primary purpose is to create a welcoming environment for students around the Bay Area to pitch their ideas. On May 24th at Lynbrook High School, teams will have business concepts ready to impress judges and win cool prizes. All new ideas, apps or physical products, will be accepted, so sign up now!
             </div>
         </div> <!-- end about-desc -->
 
@@ -191,7 +191,7 @@
                     <p>DECA Incubator is an event that sparks entrepreneurship in students from the Bay Area.
                       Presenting new and innovative products to judges, participants compete for prizes and other incentives.
                       We strive to create a welcoming environment for all entrepreneurs that have an idea they want to pitch.
-                      To clarify: you don’t need to be part of Lynbrook DECA to compete!!
+                      To clarify: you don’t need to be part of Lynbrook DECA to compete!
 
                     </p>
                 </div>
@@ -207,7 +207,7 @@
                       Think importance, as in what makes your business’s product viable and better than the competitors.
                       This part relies on creativity, and remember to think out of the box!
                       Your business can be a twist on an existing company or something entirely new.
-                      Here’s a more detailed <a href="https://apple.com"> schedule </a>.
+                      Here’s a more detailed <a href="https://drive.google.com/open?id=111xNdDfzveod3Uut_t7dRPe8RuSChHBle77Wbg2YLHM">schedule</a>.
                     </p>
                 </div>
             </div>
@@ -220,8 +220,8 @@
                     <h3 class="h2">Rules</h3>
                     <p>Each team will have their own booth and will present science fair style to judges as well as to other guests who attend.
                       In addition, a detailed 10 minute (max) presentation of the business,
-                       a 1-2 page summary (addressing points in the <a href="https://amazon.com"> rubric </a>,
-                      and a mockup of the working product (if applicable) will be required.
+                       a 1-2 page summary (addressing points in the <a href="https://docs.google.com/document/d/1uyxDRrX3ofRINHlCsIdtk_j3AkhoJNsBHpgYsVwAH7c/edit?usp=sharing">rubric</a>,
+                      and a mockup of the working product (if applicable) will be required. There are also some <a href="https://drive.google.com/open?id=1vdD3Vlg53hkBVBXOi_roNXdPuAZDpyffYGpoOx8Vmkg"> rules and requirements </a> competitors should look over.
                     </p>
                 </div>
             </div>
@@ -247,7 +247,6 @@
                 <div class="service-text">
                     <h3 class="h2">Prizes</h3>
                     <p>There will be some amazing prizes given out to the competitors that display their product in the most viable one.
-                      These vary from Beats headphones, to Amazon gift cards, to bluetooth speakers.
                       In addition, we will have guest speakers from prominent companies to come discuss business ideas with our competitors and guests.
                     </p>
                 </div>
@@ -257,7 +256,7 @@
                 <div class="service-icon"><i class="icon-lego-block"></i></div>
                 <div class="service-text">
                     <h3 class="h2">Sign Up</h3>
-                    <p>To compete in this exclusive and unique event, sign up <a href="#contact"> here </a>!
+                    <p>To compete in this exclusive and unique event, sign up <a href="#contact">here</a>!
                     </p>
                 </div>
             </div>
@@ -484,23 +483,16 @@
             </div>
         </div> <!-- end section-header -->
 
-        <div class="row clients-outer" data-aos="fade-up">
-            <div class="col-full">
-                <div class="clients">
+        <div style="text-align:center;">
+              <button id="button" class="smoothscroll btn btn--stroke2">
+                <a href="https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM" >Sign Up</a></button>
+              </div>
 
-                    <a href="https://apple.com" title="" class="clients__slide"><img src="images/apple.png" /></a>
-                    <a href="https://amazon.com" title="" class="clients__slide"><img src="images/amazon.png" /></a>
-                    <a href="" title="" class="clients__slide"><img src="images/cash.png" /></a>
-                    <a href="" title="" class="clients__slide"><img src="images/ueboom.png" /></a>
-                    <a href="" title="" class="clients__slide"><img src="images/echo.png" /></a>
-                    <a href="" title="" class="clients__slide"><img src="images/beats.png" /></a>
-                    <a href="" title="" class="clients__slide"><img src="images/phone.png" /></a>
-                    <a href="" title="" class="clients__slide"><img src="images/beats34.png" /></a>
-
-
-                </div> <!-- end clients -->
-            </div> <!-- end col-full -->
-        </div> <!-- end clients-outer -->
+              <script type="text/javascript">
+    document.getElementById("button").onclick = function () {
+        location.href = "https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM";
+    };
+</script>
 
         <div class="row clients-testimonials" data-aos="fade-up">
             <div class="col-full">
@@ -554,7 +546,32 @@
     ================================================== -->
    <!-- end s-contact -->
 
+    <section id="contact" class="s-contact">
 
+        <div class="overlay"></div>
+        <div class="contact__line"></div>
+
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">Sign Up</h3>
+                <h1 class="display-2 display-2--light">We look forward to seeing you!</h1>
+            </div>
+            <div style="text-align:center;">
+              <button id="button" class="smoothscroll btn btn--stroke2">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link" >Sign Up</a></button>
+              </div>
+
+              <script type="text/javascript">
+    document.getElementById("button").onclick = function () {
+        location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfXKv7ouockesW4jeBEERNSgx5-2xtDvS0rklLXrQ6PAKGBVw/viewform?usp=sf_link";
+    };
+</script>
+
+        </div>
+
+
+
+    </section>
     <!-- footer
     ================================================== -->
     <footer>
