--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
         <div style="text-align:center;">
               <button id="button" class="smoothscroll btn btn--stroke2">
-                <a href="https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM" >Sign Up</a></button>
+                <a href="https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM" >Prizes</a></button>
               </div>
 
               <script type="text/javascript">
