--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
             </div>
             
             <div style="text-align:center;">
-              <button id="button" class="smoothscroll btn btn--stroke2">
+              <button id="button3456" class="smoothscroll btn btn--stroke2">
                 <a href="https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM" >Prizes</a></button>
               </div>
 
               <script type="text/javascript">
-    document.getElementById("button").onclick = function () {
+    document.getElementById("button3456").onclick = function () {
         location.href = "https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM";
     };
 </script>
