--- a/index.html
+++ b/index.html
@@ -484,12 +484,12 @@
             
             <div style="text-align:center;">
               <button id="button3456" class="smoothscroll btn btn--stroke2">
-                <a href="https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM" >Prizes</a></button>
+                <a href="google.com" >Prizes</a></button>
               </div>
 
               <script type="text/javascript">
     document.getElementById("button3456").onclick = function () {
-        location.href = "https://drive.google.com/open?id=1Cd0gDhC-CEp52xAeEl_X-HgQzGYSqV1ihUDoB_OPqkM";
+        location.href = "google.com";
     };
 </script>
 
