--- a/index.html
+++ b/index.html
@@ -289,18 +289,18 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
-                                    <img src="images/qmark@1x.png"
-                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
+                                <a href="judge1.png" class="thumb-link" title="Danielle Strachman" data-size="360x544">
+                                    <img src="judge1@1x.jpeg"
+                                         srcset="judge1@1x.jpeg 1x, judge1@2x.jpeg 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    TBD
+                                    Danielle Strachman
                                 </h3>
                                 <p class="item-folio__cat">
-                                    More details coming soon!
+                                    Cofounder and General Partner of 1517 Fund
                                 </p>
                             </div>
 
@@ -309,7 +309,7 @@
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Check back soon for more details!</p>
+                                <p>Danielle Strachman - Danielle is a cofounder and general partner of 1517. She has worked with young entrepreneurs for about a decade. In 2010, during the founding of the Thiel Fellowship, Danielle joined to lead the design and operations. She's worked with some of the most prestigious founders like Vitalik Buterin and Ritesh Agarwal. Previous to her work with Peter Thiel, Danielle founded and directed Innovations Academy in San Diego, a K-8 charter school serving 400 students, with a focus on student-led project based learning and other alternative programs.</p>
                             </div>
 
                         </div>
@@ -319,18 +319,18 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
-                                    <img src="images/qmark@1x.png"
-                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
+                                <a href="judge2.png" class="thumb-link" title="Alok Nandan" data-size="1170x1132">
+                                    <img src="judge2@1x.jpeg"
+                                         srcset="qmark@1x.jpeg 1x, qmark@2x.jpeg 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    TBD
+                                    Alok Nandan
                                 </h3>
                                 <p class="item-folio__cat">
-                                    More details coming soon!
+                                    General Partner at Emergent Ventures
                                 </p>
                             </div>
 
@@ -339,7 +339,7 @@
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Check back soon for more details!</p>
+                                <p>Alok Nandan - Alok is a Partner at Emergent Ventures. Previously, Alok ran a product strategy consulting firm advising a number of high growth startups. Prior to that, Alok was a Director of Product at TempoAI and later at Salesforce which acquired TempoAI in 2016. Earlier, Alok led product teams at YuMe (IPO: NYSE) where he joined at an early stage and experienced its evolution into a public company. Prior to that, Alok held multiple product management roles at Microsoft, with the last one in Windows Azure. Alok was also co-founder of ToneThis a mobile technology startup. Alok holds a Bachelors in Computer Science and Engineering from IIT Kharagpur, a Masters and Ph.D. in Computer Science from UCLA. Alok is also a co-inventor for three technology patents.</p>
                             </div>
 
                         </div>
@@ -349,18 +349,18 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
-                                    <img src="images/qmark@1x.png"
-                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
+                                <a href="judge3.jpg" class="thumb-link" title="Orrin Mahoney" data-size="600x750">
+                                    <img src="judge3@1x.jpeg"
+                                         srcset="judge3@1x.jpeg 1x, judge3@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    TBD
+                                    Orrin Mahoney
                                 </h3>
                                 <p class="item-folio__cat">
-                                    More details coming soon!
+                                    Rotary District 5170 Governer
                                 </p>
                             </div>
 
@@ -369,7 +369,7 @@
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Check back soon for more details!</p>
+                                <p>Orrin Mahoney - Orrin Mahoney is the Rotary District 5170 Governor. His theme for his year as District Governor: Rotary: Building Lifelong Friendships while Making a Difference. Orrin Mahoney is a resident of Cupertino, California. He graduated from Carnegie-Mellon University in 1967 and received a Master’s degree from Stanford University. After a 35 year management career at HP, he retired and devoted his time to community activities. He is a former member of the Cupertino City Council, and has served twice as the Mayor of Cupertino. He is an active member and past president of the Rotary Club of Cupertino.</p>
                             </div>
 
                         </div>
