--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             <div class="item-folio__thumb">
                                 <a href="judge2.png" class="thumb-link" title="Alok Nandan" data-size="1170x1132">
                                     <img src="judge2@1x.jpeg"
-                                         srcset="qmark@1x.jpeg 1x, qmark@2x.jpeg 2x" alt="">
+                                         srcset="judge2@1x.jpeg 1x, judge2@2x.jpeg 2x" alt="">
                                 </a>
                             </div>
 
