--- a/index.html
+++ b/index.html
@@ -379,18 +379,18 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
-                                    <img src="images/qmark@1x.png"
-                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
+                                <a href="judge4.png" class="thumb-link" title="TBD" data-size="1080x1532">
+                                    <img src="judge4@1x.png"
+                                         srcset="judge4@1x.png 1x, judge4@2x.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    TBD
+                                    Andrea Amaraggi
                                 </h3>
                                 <p class="item-folio__cat">
-                                    More details coming soon!
+                                    Founder and Principal at Cohere Insights
                                 </p>
                             </div>
 
@@ -399,7 +399,7 @@
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Check back soon for more details!</p>
+                                <p>Andrea Amaraggi is founder and principal at Cohere Insights. She has more than 20 years of consulting experience in all aspects of program development and management of analytics applications on both the business and technology side, for companies of various sizes and industries around the globe.</p>
                             </div>
 
                         </div>
