--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
 
                             <div class="item-folio__thumb">
                                 <a href="judge4.png" class="thumb-link" title="TBD" data-size="1080x1532">
-                                    <img src="judge4@1x.png"
-                                         srcset="judge4@1x.png 1x, judge4@2x.png 2x" alt="">
+                                    <img src="judge4@1x.jpeg"
+                                         srcset="judge4@1x.jpeg 1x, judge4@2x.jpeg 2x" alt="">
                                 </a>
                             </div>
 
