--- a/index.html
+++ b/index.html
@@ -405,65 +405,7 @@
                         </div>
                     </div> <!-- end masonry__brick -->
 
-                    <div class="masonry__brick" data-aos="fade-up">
-                        <div class="item-folio">
-
-                            <div class="item-folio__thumb">
-                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
-                                    <img src="images/qmark@1x.png"
-                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
-                                </a>
-                            </div>
-
-                            <div class="item-folio__text">
-                                <h3 class="item-folio__title">
-                                    TBD
-                                </h3>
-                                <p class="item-folio__cat">
-                                    More details coming soon!
-                                </p>
-                            </div>
-
-                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
-                                <i class="icon-link"></i>
-                            </a>
-
-                            <div class="item-folio__caption">
-                                <p>Check back soon for more details!</p>
-                            </div>
-
-                        </div>
-                    </div><!-- end masonry__brick -->
-
-                    <div class="masonry__brick" data-aos="fade-up">
-                        <div class="item-folio">
-
-                            <div class="item-folio__thumb">
-                                <a href="images/qmark.png" class="thumb-link" title="TBD" data-size="1050x700">
-                                    <img src="images/qmark@1x.png"
-                                         srcset="images/qmark@1x.png 1x, images/qmark@2x.png 2x" alt="">
-                                </a>
-                            </div>
-
-                            <div class="item-folio__text">
-                                <h3 class="item-folio__title">
-                                    TBD
-                                </h3>
-                                <p class="item-folio__cat">
-                                    More details coming soon!
-                                </p>
-                            </div>
-
-                            <a href="https://google.com" class="item-folio__project-link" title="Project link">
-                                <i class="icon-link"></i>
-                            </a>
-
-                            <div class="item-folio__caption">
-                                <p>Check back soon for more details!</p>
-                            </div>
-
-                        </div>
-                    </div> <!-- end masonry__brick -->
+                   <!-- end masonry__brick -->
 
                 </div> <!-- end masonry -->
             </div> <!-- end col-full -->
