--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <div class="service-icon"><i class="icon-lego-block"></i></div>
                 <div class="service-text">
                     <h3 class="h2">Sign Up</h3>
-                    <p>To compete in this exclusive and unique event, sign up <a href="#contact">here</a>!
+                    <p>To compete in this exclusive and unique event, sign up <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiz_LHq8Lu-polSDU3FvN3303BBuGWCnf1VnGlk6pHxHXk2w/viewform?usp=sf_link">here</a>!
                     </p>
                 </div>
             </div>
